--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         href="https://rosindustrial.org/" target="_blank">ROS-Industrial group</a>, where I work in the domain of autonomous robotics. 
                     </br><br> Previously, I worked as a researcher at <a href="https://www.sutd.edu.sg/" target="_blank">Singapore University of Technology and Design (SUTD)</a>, a public
                     university in Singapore, with <a href="https://smart.mit.edu/"
-                    target="_blank">Singapore-MIT Alliance for Research & Technology Centre</a> and SUTD-MIT International Design Centre in the domains of autonomous vehicles and additive manufacturing.
+                    target="_blank">Singapore-MIT Alliance for Research & Technology Centre (SMART)</a> and SUTD-MIT International Design Centre (IDC) in the domains of autonomous vehicles and additive manufacturing.
     
 
 
