--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
                         <meta itemprop="image" content="https://sahil-cmd.github.io/web/img/sahil_panjwani_profile.png"> -->
 
                         <div class="portrait"
-                            style="background-image: url('./img/sahil_panjwani_profile.png');"></div>
+                            style="background-image: url('./img/sahil_panjwani_profile.png');
+                            width:200px;
+                            height:100px;
+                            background-position: center;">
+                            &nbsp;
+                        </div>
                         <meta itemprop="image" content="./img/sahil_panjwani_profile.png">
 
                         
