--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                         <div class="portrait"
                             style="background-image: url('./img/sahil_panjwani_profile.png');
                             width:200px;
-                            height:300px;
-                            margin: -75px 0 0 -100px;">
+                            height:250px;
+                            margin: 0 0 0 -100px;">
                             &nbsp;
                         </div>
                         <meta itemprop="image" content="./img/sahil_panjwani_profile.png">
