--- a/index.html
+++ b/index.html
@@ -67,11 +67,17 @@
                             style="background-image: url('https://sahil-cmd.github.io/web/img/sahil_panjwani_profile.png');"></div>
                         <meta itemprop="image" content="https://sahil-cmd.github.io/web/img/sahil_panjwani_profile.png"> -->
 
-                        <div class="portrait"
+                        <!-- <div class="portrait"
                             style="background-image: url('./img/sahil_panjwani_profile.png');
                             width:200px;
                             height:220px;
                             margin: 0 0 0 -100px;">
+                            &nbsp;
+                        </div> -->
+                        <div class="portrait"
+                            style="background-image: url('./img/sahil_panjwani_profile.png');
+                            width:200px;
+                            height:220px;">
                             &nbsp;
                         </div>
                         <meta itemprop="image" content="./img/sahil_panjwani_profile.png">
