--- a/index.html
+++ b/index.html
@@ -188,17 +188,28 @@
     <section id="publications" class="home-section">
         <div class="container">
 
-
+            <div class="row">
+                <div class="col-xs-12 col-md-4 section-heading">
+                  <h1>Selected Publications</h1>
+                  <p>&ast; indicates equal contribution</p>
+                </div>
+            <div class="col-xs-12 col-md-8">
 
 
             <div class="row">
                 <div class="section-heading">
                     <h1 style="text-align:center">Selected Publications</h1>
+                    <pstyle="text-align:center">&ast; indicates equal contribution</p>
                     <p style="text-align:center">For a complete list, kindly have a look at <a
                             href="https://scholar.google.com/citations?user=Jzr3KBQAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a></p>
                 </div>
 
             </div>
+
+
+
+
+
     </section>
 
 
