--- a/index.html
+++ b/index.html
@@ -521,8 +521,13 @@
                         </li>
 
 
-                        <li>
+                        <!-- <li>
                             <i class="fa fa-linkedin big-icon" aria-hidden="true"></i>
+                            <span id="person-linkedin" itemprop="sameAs" href="https://www.linkedin.com/in/ersahilpanjwani"> https://www.linkedin.com/in/ersahilpanjwani</span>
+                        </li> -->
+
+                        <li>
+                            <i class="fa-li fa fa-linkedin fa-2x" aria-hidden="true"></i>
                             <span id="person-linkedin" itemprop="sameAs" href="https://www.linkedin.com/in/ersahilpanjwani"> https://www.linkedin.com/in/ersahilpanjwani</span>
                         </li>
 
