--- a/index.html
+++ b/index.html
@@ -489,15 +489,6 @@
             </div>
 
 
-
-                
-
-
-
-
-
-
-
     </section>
 
 
@@ -544,6 +535,21 @@
             </div>
 
         </div>
+    </section>
+
+    <section id="teaching" class="home-section">
+        <div class="container">
+    
+            <div class="row">
+                <div class="col-xs-12 col-md-4 section-heading">
+                    <h1>Teaching</h1>
+                </div>
+                <div class="col-xs-12 col-md-8">
+                    <br>
+                    <p>I have instructed university students in Automotive Engineering and Polytechnic students in Robotics in Singapore.</p>
+                </div>
+                </div>
+            </div>
     </section>
 
 
