--- a/index.html
+++ b/index.html
@@ -176,10 +176,7 @@
                                 <h3>Education</h3>
                                 <ul class="ul-edu fa-ul">
                                   
-                                  <li style = "background-image: url('./img/manipal_logo.png');
-                                    width:30px;
-                                    height:30px;">
-                                    &nbsp;
+                                  <li style = "background-image: url('./img/manipal_logo.png');">
                                     <i class="fa-li fa"></i>
                                     <div class="description">
                                       <p class="course">Mechanical Engineering</p>
@@ -202,10 +199,7 @@
                                   </div> -->
                                 <!-- </ul> -->
                                   
-                                  <li style = "background-image: url('./img/ntu_logo.png');
-                                    width:30px;
-                                    height:30px;">
-                                    &nbsp;
+                                  <li style = "background-image: url('./img/ntu_logo.png');">
                                     <i class="fa-li fa"></i>
                                     <div class="description">
                                       <p class="course">Bachelor's Semester Exchange, 2017</p>
