--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                   <li style = "background-image: url('./img/ntu_logo.png');">
                                     <i class="fa-li fa"></i>
                                     <div class="description">
-                                      <p class="course">Bachelor's Semester Exchange, 2017</p>
+                                      <p class="course">Bachelor's Semester Exchange</p>
                                       <p class="institution">Nanyang Technological University, Singapore</p>
                                     </div>
                                   </li>
