--- a/index.html
+++ b/index.html
@@ -585,7 +585,8 @@
 
             <div class="row">
                 <div class="col-xs-12 col-md-4 section-heading">
-                  <h1>Selected Projects</h1>
+                  <h1 style="text-align:center">Selected Projects</h1>
+                  <!-- <h1>Selected Projects</h1> -->
                 </div>
             <div class="col-xs-12 col-md-8">
 
