--- a/index.html
+++ b/index.html
@@ -675,13 +675,7 @@
             <div class="row">
           
                 <div class="col-md-12">
-                    <img src="./projects/baja_1.png" class="pub-banner"
-                        itemprop="image">
-                    </a>
-                </div>
-
-                <div class="col-md-12">
-                    <img src="./projects/baja_2.png" class="pub-banner"
+                    <img src="./projects/efficycle.png" class="pub-banner"
                         itemprop="image">
                     </a>
                 </div>
