--- a/index.html
+++ b/index.html
@@ -584,7 +584,8 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-xs-12 col-md-4 section-heading">
+                <!-- <div class="col-xs-12 col-md-4 section-heading"> -->
+                <div class="section-heading"></div>
                   <h1 style="text-align:center">Selected Projects</h1>
                   <!-- <h1>Selected Projects</h1> -->
                 </div>
