--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
 
 
-    <link rel="alternate" href="https://sahil-cmd.github.io/web/index.xml" type="application/rss+xml" title="Sahil Panjwani">
-    <link rel="feed" href="https://sahil-cmd.github.io/web/index.xml" type="application/rss+xml" title="Sahil Panjwani">
+    <link rel="alternate" href="https://sahil-cmd.github.io/sahil.github.io/index.xml" type="application/rss+xml" title="Sahil Panjwani">
+    <link rel="feed" href="https://sahil-cmd.github.io/sahil.github.io/index.xml" type="application/rss+xml" title="Sahil Panjwani">
 
     <link rel="icon" type="image/png" href="/img/icon.png"> <!-- This is the icon on top of the website -->
     <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-    <link rel="canonical" href="https://sahil-cmd.github.io/web/">
+    <link rel="canonical" href="https://sahil-cmd.github.io/sahil.github.io/">
 
     <title>Sahil Panjwani</title>
 
@@ -150,8 +150,8 @@
 
 <!-- 
                         <div class="portrait"
-                            style="background-image: url('https://sahil-cmd.github.io/web/img/sahil_panjwani_profile.png');"></div>
-                        <meta itemprop="image" content="https://sahil-cmd.github.io/web/img/sahil_panjwani_profile.png"> -->
+                            style="background-image: url('https://sahil-cmd.github.io/sahil.github.io/img/sahil_panjwani_profile.png');"></div>
+                        <meta itemprop="image" content="https://sahil-cmd.github.io/sahil.github.io/img/sahil_panjwani_profile.png"> -->
 
                         <!-- <div class="portrait"
                             style="background-image: url('./img/sahil_panjwani_profile.png');
@@ -181,7 +181,7 @@
 
                         </div>
 
-                        <link itemprop="url" href="https://sahil-cmd.github.io/web/">
+                        <link itemprop="url" href="https://sahil-cmd.github.io/sahil.github.io/">
 
                         <ul class="social-icon" aria-hidden="true">
 
