--- a/index.html
+++ b/index.html
@@ -217,11 +217,13 @@
 
 
 
-                    <div class="typewriter">
+                    <!-- <div class="typewriter">
                         <h1>Hi, I'm Sahil.</h1>
-                    </div>
+                    </div> -->
 
-                    <br>
+                    <h1 id="about-me">Hi, I'm Sahil.</h1>
+
+                    <!-- <br> -->
 
                     <p>I am a Research Engineer at <a href="https://www.a-star.edu.sg/"
                         target="_blank">Agency for Science, Technology and Research (A*STAR)</a> with the <a
