--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@
 
 
 
-                    <!-- <div class="typewriter">
-                        <h1>Hi, I'm Sahil.</h1>
-                    </div> -->
+                    <div class="typewriter">
+                        <!-- <h1>Hi, I'm Sahil.</h1> -->
+                        <h1 id="about-me">Hi, I'm Sahil.</h1>
+                    </div>
 
-                    <h1 id="about-me">Hi, I'm Sahil.</h1>
+                    <!-- <h1 id="about-me">Hi, I'm Sahil.</h1> -->
 
                     <!-- <br> -->
 
