--- a/index.html
+++ b/index.html
@@ -216,15 +216,16 @@
                 <div class="col-xs-12 col-md-8" itemprop="description">
 
 
-
+                    <br>
+                    <!-- <br> -->
                     <div class="typewriter">
                         <!-- <h1>Hi, I'm Sahil.</h1> -->
-                        <h1 id="about-me">Hi, I'm Sahil.</h1>
+                        <h1 id="greetings">Hi, I'm Sahil.</h1>
                     </div>
 
                     <!-- <h1 id="about-me">Hi, I'm Sahil.</h1> -->
 
-                    <!-- <br> -->
+                    <br>
 
                     <p>I am a Research Engineer at <a href="https://www.a-star.edu.sg/"
                         target="_blank">Agency for Science, Technology and Research (A*STAR)</a> with the <a
