--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                                 </a>
                             </h3>
 
+                            <p class="text-center" style="margin-top: 2em;">
+                                <img src="./img/ROS-AP-logo.png" class="img-fluid w-50">
+                            </p>
+
                         </div>
 
                         <link itemprop="url" href="https://sahil-cmd.github.io/web/">
