--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                             </h3>
 
                             <p class="text-center" style="margin-top: 2em;">
-                                <img src="./img/ROS-AP-logo.png" class="img-fluid w-50">
+                                <img src="./img/ROS-AP-logo.png" class="img-fluid w-20">
+                                <!-- <img src="./img/ROS-AP-logo.png" class="pub-banner" itemprop="image"> -->
                             </p>
 
                         </div>
