--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                     <span itemprop="name">ROS-Industrial </span>
                                 </a>
                             </h3>
-                            
+
 
                             <p class="text-center" style="margin-top: 2em;">
                                 <img src="./img/ROS-AP-logo.png" class="img-fluid w-20">
@@ -227,7 +227,7 @@
                     <br>
                     <div class="typewriter">
                         <!-- <h1>Hi, I'm Sahil.</h1> -->
-                        <h1 id="greetings">Hi, I'm Sahil.</h1>
+                        <h1 id="greetings">Hello, I'm Sahil.</h1>
                     </div>
 
                     <br>
