--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
                     <br>
                     <br>
                     <div class="typewriter">
-                        <!-- <h1>Hi, I'm Sahil.</h1> -->
-                        <h1 id="greetings">Hello, I'm Sahil.</h1>
+                        <h1 id="greetings">Hi, I'm Sahil.</h1>
                     </div>
 
                     <br>
