--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 
 
                             <p class="text-center" style="margin-top: 2em;">
-                                <img src="./img/ROS-AP-logo.png" class="img-fluid w-20">
-                                <!-- <img src="./img/ROS-AP-logo.png" class="pub-banner" itemprop="image"> -->
+                                <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-20"> -->
+                                <img src="./img/ROS-AP-logo.png" class="pub-banner" itemprop="image">
                             </p>
 
                         </div>
