--- a/index.html
+++ b/index.html
@@ -181,12 +181,21 @@
                             </h3>
 
 
-                            <p class="text-center" style="margin-top: 2em;">
-                                <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-20"> -->
+                            <!-- <p class="text-center" style="margin-top: 2em;">
+                                <!- <img src="./img/ROS-AP-logo.png" class="img-fluid w-20"> ->
                                 <img src="./img/ROS-AP-logo.png" class="pub-banner" itemprop="image">
-                            </p>
+                            </p> -->
+                            
 
                         </div>
+
+                        <div class="portrait-company"
+                            style="background-image: url('./img/ROS-AP-logo.png');
+                            width:380px;
+                            height:180px;">
+                            &nbsp;
+                        </div>
+                        <meta itemprop="image" content="./img/ROS-AP-logo.png">
 
                         <link itemprop="url" href="https://sahil-cmd.github.io/sahil.github.io/">
 
@@ -226,7 +235,7 @@
                     <br>
                     <br>
                     <div class="typewriter">
-                        <h1 id="greetings">Hi, I'm Sahil.</h1>
+                        <h1 id="greetings">Hello, I'm Sahil.</h1>
                     </div>
 
                     <br>
