--- a/index.html
+++ b/index.html
@@ -182,7 +182,10 @@
 
 
                             <p class="text-center" style="margin-top: 2em;">
-                                <img src="./img/ROS-AP-logo.png" class="img-fluid w-10">
+                                <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> -->
+                                <img src="./img/ROS-AP-logo.png" 
+                                width="380"
+                                height="180">
                                 <!-- <img src="./img/ROS-AP-logo.png" class="pub-banner" itemprop="image"> -->
                             </p>
                             
@@ -227,7 +230,7 @@
                     <br>
                     <br>
                     <div class="typewriter">
-                        <h1 id="greetings">Hi, I'm Sahil.</h1>
+                        <h1 id="greetings">Hello, I'm Sahil.</h1>
                     </div>
 
                     <br>
