--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
                             </h3>
 
 
-                            <p class="text-center" style="margin-top: 2em;">
-                                <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> -->
-                                <img src="./img/ROS-AP-logo.png" 
-                                width="210"
-                                height="100">
-                                <!-- <img src="./img/ROS-AP-logo.png" class="pub-banner" itemprop="image"> -->
-                            </p>
+                            <!-- <p class="text-center" style="margin-top: 2em;">
+                                <!- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> ->
+                                <img src="./img/ROS-AP-logo.png" width="210" height="100">
+                                <!- <img src="./img/ROS-AP-logo.png" class="pub-banner" itemprop="image"> ->
+                            </p> -->
+
+                            <p><img src="./img/ROS-AP-logo.png" alt="logo" width="210" height="100"> (width:210px, height:100px)</p>
                             
 
                         </div>
