--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             </h3>
 
 
-                            <p class="text-center" style="margin-top: 2em; margin-left: 4em;">
+                            <p class="text-center" style="margin-top: 2em; margin-left: 10em;">
                                 <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> -->
                                 <img src="./img/ROS-AP-logo.png" width="190" height="90">
                                 <!-- <img src="./img/ROS-AP-logo.png" class="pub-banner" itemprop="image"> -->
@@ -227,7 +227,7 @@
                     <br>
                     <br>
                     <div class="typewriter">
-                        <h1 id="greetings">Hello, I'm Sahil.</h1>
+                        <h1 id="greetings">Hi, I'm Sahil.</h1>
                     </div>
 
                     <br>
