--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
                             </h3>
 
 
-                            <p class="text-center" style="margin-top: 2em; margin-left: 4em;">
-                                <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> -->
+                            <!-- <p class="text-center" style="margin-top: 2em; margin-left: 4em;">
+                                <!- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> ->
                                 <img src="./img/ROS-AP-logo.png" width="190" height="90">
-                            </p>
+                            </p> -->
 
                         </div>
 
@@ -217,6 +217,11 @@
 
 
                         </ul>
+
+                        <p class="text-center" style="margin-top: 2em; margin-left: 4em;">
+                            <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> -->
+                            <img src="./img/ROS-AP-logo.png" width="190" height="90">
+                        </p>
 
                     </div>
                 </div>
