--- a/index.html
+++ b/index.html
@@ -180,11 +180,13 @@
                                 </a>
                             </h3>
 
-
-                            <p class="text-center" style="margin-top: 2em; margin-left: 5em;">
-                                <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> -->
-                                <img src="./img/ROS-AP-logo.png" width="190" height="90">
-                            </p>
+                            <a href="https://rosindustrial.org/" target="_blank" itemprop="url">
+                                <p class="text-center" style="margin-top: 2em; margin-left: 5em;">
+                                    <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> -->
+                                    <img src="./img/ROS-AP-logo.png" width="190" height="90">
+                                </p>                                
+                            </a>
+                            
 
                         </div>
 
