--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">Sahil Panjwani</a>
           </div>
