--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             </h3>
 
                             <a href="https://rosindustrial.org/" target="_blank" itemprop="url">
-                                <p class="text-center" style="margin-top: 2em; margin-left:: 10px;">
+                                <p class="text-center" style="margin-top: 2em; margin-left: 10px;">
                                     <!-- <img src="./img/ROS-AP-logo.png" class="img-fluid w-10"> -->
                                     <img src="./img/ROS-AP-logo.png" width="190" height="90">
                                 </p>                                
