--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 </head>
 
-<body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71">
+<body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71" class="dark">
 
     <!-- <div id="nav-placeholder"></div>
     <script src="//code.jquery.com/jquery.min.js"></script>
@@ -236,7 +236,7 @@
                     <br>
                     <br>
                     <div class="typewriter">
-                        <h1 id="greetings">Hi, I'm Sahil.</h1>
+                        <h1 id="greetings">Hello, I'm Sahil.</h1>
                     </div>
 
                     <br>
