--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <br>
                     <br>
                     <div class="typewriter">
-                        <h1 id="greetings">Hello, I'm Sahil.</h1>
+                        <h1 id="greetings">Hi, I'm Sahil.</h1>
                     </div>
 
                     <br>
