--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@
       </nav> -->
 
 
-
     <span id="homepage" style="display: none"></span>
 
     <section id="about" class="home-section">
@@ -286,7 +285,7 @@
                     <br>
                     <br>
                     <div class="typewriter">
-                        <h1 id="greetings">Hello, I'm Sahil.</h1>
+                        <h1 id="greetings">Hi, I'm Sahil.</h1>
                     </div>
 
                     <br>
