--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 
                             <li>
-                                <a itemprop="sameAs" href="mailto:ersahilpanjwani@gmail.com" target="_blank">
+                                <a itemprop="sameAs" href="mailto:panjwani_sahil@artc.a-star.edu.sg" target="_blank">
                                     <i class="fa fa-envelope big-icon"></i>
                                 </a>
                             </li>
@@ -1012,7 +1012,7 @@
                         <li>
                             <i class="fa-li fa fa-envelope fa-2x" aria-hidden="true"></i>
                             <span id="person-email" itemprop="email"><a
-                                    href="mailto:ersahilpanjwani@gmail.com">ersahilpanjwani@gmail.com</a></span>
+                                    href="mailto:panjwani_sahil@artc.a-star.edu.sg">panjwani_sahil@artc.a-star.edu.sg</a></span>
                         </li>
 
 
