updated contact details

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 
                             <li>
-                                <a itemprop="sameAs" href="mailto:panjwani_sahil@artc.a-star.edu.sg" target="_blank">
+                                <a itemprop="sameAs" href="mailto:ersahilpanjwani@gmail.com" target="_blank">
                                     <i class="fa fa-envelope big-icon"></i>
                                 </a>
                             </li>
