--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 
                             <li>
-                                <a itemprop="sameAs" href="mailto:ersahilpanjwani@gmail.com" target="_blank">
+                                <a itemprop="sameAs" href="mailto:panjwani_sahil@artc.a-star.edu.sg" target="_blank">
                                     <i class="fa fa-envelope big-icon"></i>
                                 </a>
                             </li>
@@ -412,9 +412,9 @@
                     <div class="col-md-12">
 
                         <h3 class="article-title" itemprop="name">
+                            <a href="https://ieeexplore.ieee.org/document/9635922" itemprop="url">Context and Orientation Aware Path Tracking</a>
                             <!-- <a href="https://sahil-cmd.github.io/sahil.github.io/publication/copp/" itemprop="url">Context and Orientation Aware Path Tracking</a> -->
-                            <a>Context and Orientation Aware Path Tracking</a>
-
+                            
                         </h3>
 
                         <div class="pub-authors" itemprop="author">
